--- a/assignment5/assignment5.csproj
+++ b/assignment5/assignment5.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Die.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SumIsGreater.cs" />
     <Compile Include="TwoSixesInARow.cs" />
   </ItemGroup>
   <ItemGroup>
